# forecast_evaluation

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml
docs/: Makefile  make.bat
docs/source/: api.rst  conf.py  index.rst  methodology.rst  user_guide.rst
docs/source/api/: core.rst  data.rst  tests.rst  utils.rst  visualisations.rst
notebooks/: example_notebook.ipynb  mtp_replication_notebook.ipynb  plot_intra_period_accuracy.py
src/forecast_evaluation/: __init__.py  utils.py
src/forecast_evaluation/core/: __init__.py  ar_p_model.py  main_table.py  outturns_revisions_table.py  random_walk_model.py  revisions_table.py  transformations.py
src/forecast_evaluation/dashboard/: app.py  create_app.py  ui.py  utils.py
src/forecast_evaluation/dashboard/tabs/: about.py  accuracy.py  bias.py  correlation.py  efficiency.py  hedgehog.py  intra_period.py  outturn_revisions.py  quantile_time_machine.py  radar.py  time_machine.py
src/forecast_evaluation/dashboard/theme/: _brand.yml  brand.py
src/forecast_evaluation/data/: DensityForecastData.py  ForecastData.py  NowcastData.py  __init__.py  _plotting_mixin.py  loader.py  sample_data.py  schema.py  utils.py
src/forecast_evaluation/tests/: __init__.py  accuracy.py  bias.py  blanchard_leigh.py  correlation.py  diebold_mariano.py  fluctuation_tests.py  intra_period.py  results.py  revisions_errors_correlation.py  revisions_predictability.py  rolling_analysis.py  strong_efficiency.py  weak_efficiency.py
src/forecast_evaluation/visualisations/: __init__.py  accuracy.py  bias.py  blanchard_leigh.py  correlation.py  density_plots.py  errors.py  forecast.py  forecast_errors.py  hedgehog.py  intra_period.py  outturn_revisions.py  radar.py  revisions_predictability.py  strong_efficiency.py  theme.py
tests/: conftest.py  profiling.py  run_nowcast_dash.py  test_DM_test.py  test_accuracy.py  test_ar_p_model.py  test_bias.py  test_correlation.py  test_dashboard.py  test_data_class.py  test_density_data_class.py  test_ensure_consistent.py  test_first_forecast_horizon.py  test_no_outturn_vintages.py  test_nowcasting.py  test_plotting_mixin.py  test_random_walk_model.py  test_result_classes.py  test_summary.py  test_summary_visual.py  test_transformation.py  test_visualisation_mixin.py
tests/__snapshots__/: test_correlation.ambr  test_data_class.ambr  test_no_outturn_vintages.ambr  test_summary.ambr  test_summary_visual.ambr
tests/data/: df_mixed_ranges.parquet
(+4 files in other folders)
